--- a/_posts/2022-09-13-hw1.md
+++ b/_posts/2022-09-13-hw1.md
@@ -3,7 +3,7 @@ layout: post
 title:  "A Brief Intro to Machine Learning"
 date:   2022-09-16
 author: Lucy Storts
-description: This quick read will discuess a couple different types of machine learning models and how they each work.
+description: This quick read will discuss a couple different types of machine learning models and how they each work.
 image: /assets/images/blog-image.jpg
 ---
 Hello! Today I am going to share some basic information about machine learning algorithms that I learned while doing research on the the effects of machine learning methods on the relationship between social media and substance use. <br>
